--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@ JPG Fast Image Compresor </h1>
     <div class="row sidmargin">
     <div class="col-sm-3 ad">
         <div class="crd   jumbotron"><strong>ADVERTISMENT
-frames            </strong></div>
+Frames            </strong></div>
         <div class="crd   jumbotron"><strong>ADVERTISMENT Frames
             </strong>
         </div>
